--- a/recipebook/templates/recipe_list.html
+++ b/recipebook/templates/recipe_list.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<title>Recipe Book</title>
-	</head>
-	<body>
-		<ol>
-			{% for recipe in recipes %}
-			<li><a href={{recipe.link}}>{{ recipe.name }}</a></li>
-			{% endfor %}
-		</ol>
-	</body>
+    <head>
+        <title>Recipe Book</title>
+    </head>
+    <body>
+        <ul>
+            {% for recipe in recipes %}
+                <li>
+                    <a href={{ recipe.link }}>{{ recipe.name }}</a>
+                </li>
+            {% endfor %}
+        </ul>
+    </body>
 </html>
