--- a/recipebook/templates/recipe_ingredients.html
+++ b/recipebook/templates/recipe_ingredients.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        <title>Recipe Book</title>
-    </head>
-    <body>
-        <ul>
-            {% for ingredient in ingredients %}<li>{{ ingredient.quantity }} of {{ ingredient.name }}</li>{% endfor %}
-        </ul>
-    </body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+    <ul>
+        {% for ingredient in ingredients %}<li>{{ ingredient.quantity }} of {{ ingredient.name }}</li>{% endfor %}
+    </ul>
+{% endblock %}
