--- a/recipebook/templates/recipe_list.html
+++ b/recipebook/templates/recipe_list.html
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        <title>Recipe Book</title>
-    </head>
-    <body>
-        <ul>
-            {% for recipe in recipes %}
-                <li>
-                    <a href={{ recipe.link }}>{{ recipe.name }}</a>
-                </li>
-            {% endfor %}
-        </ul>
-    </body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+    <ul>
+        {% for recipe in recipes %}
+            <li>
+                <a href={{ recipe.link }}>{{ recipe.name }}</a>
+            </li>
+        {% endfor %}
+    </ul>
+{% endblock %}
