--- a/recipebook/templates/recipe_ingredients.html
+++ b/recipebook/templates/recipe_ingredients.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
     <ul>
-        {% for ingredient in ingredients %}<li>{{ ingredient.quantity }} of {{ ingredient.name }}</li>{% endfor %}
+        {% for ingredient in ingredients %}
+		    <li>{{ ingredient.quantity }} of {{ ingredient.name }}</li>
+		{% endfor %}
     </ul>
 {% endblock %}
