Modified list view of Recipe

--- a/recipebook/templates/recipe_list.html
+++ b/recipebook/templates/recipe_list.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
     <ul>
-        {% for recipe in recipes %}
+        {% for recipe in recipe_list %}
             <li>
-                <a href={{ recipe.link }}>{{ recipe.name }}</a>
+				<a href={{ recipe.get_absolute_url }}>{{ recipe }}</a>
             </li>
         {% endfor %}
     </ul>
