--- a/recipebook/templates/recipe_detail.html
+++ b/recipebook/templates/recipe_detail.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
+<p>Author: {{recipe.author}}</p>
     <ul>
-        {% for ingredient in ingredients %}
+		{% for ingredient in ingredients %}
 		<li>{{ ingredient.quantity }} of {{ ingredient.ingredient }}</li>
 		{% endfor %}
     </ul>
