Created login logout flow

--- a/recipebook/templates/base.html
+++ b/recipebook/templates/base.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-US">
-    <head>
-        <title>Recipe Book</title>
-    </head>
-    <body>
-        <h1>Recipe Book</h1>
-        {% block content %}{% endblock %}
-    </body>
+  <head>
+    <title>Recipe Book</title>
+  </head>
+  <body>
+    <h1>Recipe Book</h1>
+    {% block content %}{% endblock %}
+    <form method="POST" action="{% url 'logout' %}">
+      {% csrf_token %} {{ form.as_p }}
+      <button type="submit">Logout</button>
+    </form>
+  </body>
 </html>
