Created conditional logout login buttons

--- a/recipebook/templates/base.html
+++ b/recipebook/templates/base.html
@@ -4,11 +4,19 @@
     <title>Recipe Book</title>
   </head>
   <body>
-    <h1>Recipe Book</h1>
+    <header>
+      <h1>Recipe Book</h1>
+      {% if request.user.is_authenticated %}
+      <form method="POST" action="{% url 'logout' %}">
+        {% csrf_token %} {{ form.as_p }}
+        <button type="submit">Logout</button>
+      </form>
+      {% else %}
+      <a href="{% url 'login' %}">
+        <button type="submit">Login</button>
+      </a>
+      {% endif %}
+    </header>
     {% block content %}{% endblock %}
-    <form method="POST" action="{% url 'logout' %}">
-      {% csrf_token %} {{ form.as_p }}
-      <button type="submit">Logout</button>
-    </form>
   </body>
 </html>
