Added heading text to pages

--- a/recipebook/templates/recipe_detail.html
+++ b/recipebook/templates/recipe_detail.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
+<h2>Recipe Detail: {{recipe}}</h2>
 <p>Author: {{recipe.author}}</p>
-    <ul>
-		{% for ingredient in ingredients %}
-		<li>{{ ingredient.quantity }} of {{ ingredient.ingredient }}</li>
-		{% endfor %}
-    </ul>
+<ul>
+  {% for ingredient in ingredients %}
+  <li>{{ ingredient.quantity }} of {{ ingredient.ingredient }}</li>
+  {% endfor %}
+</ul>
 {% endblock %}
