--- a/recipebook/templates/recipe_list.html
+++ b/recipebook/templates/recipe_list.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-    <ul>
-        {% for recipe in recipe_list %}
-            <li>
-				<a href={{ recipe.get_absolute_url }}>{{ recipe }}</a>
-            </li>
-        {% endfor %}
-    </ul>
+<h2>Recipe List</h2>
+<ul>
+  {% for recipe in recipe_list %}
+  <li>
+    <a href={{ recipe.get_absolute_url }}>{{ recipe }}</a>
+  </li>
+  {% endfor %}
+</ul>
 {% endblock %}
