Changed login button to a link

--- a/recipebook/templates/base.html
+++ b/recipebook/templates/base.html
@@ -4,7 +4,7 @@
     <title>Recipe Book</title>
   </head>
   <body>
-    <header>
+    <header style="display: flex; flex-direction: row; align-items: center; column-gap: 1rem;">
       <h1>Recipe Book</h1>
       {% if request.user.is_authenticated %}
       <form method="POST" action="{% url 'logout' %}">
@@ -12,9 +12,7 @@
         <button type="submit">Logout</button>
       </form>
       {% else %}
-      <a href="{% url 'login' %}">
-        <button type="submit">Login</button>
-      </a>
+      <a href="{% url 'login' %}">Login</a>
       {% endif %}
     </header>
     {% block content %}{% endblock %}
