Refactored login logout redirects

--- a/recipebook/templates/registration/login.html
+++ b/recipebook/templates/registration/login.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-		<form method="POST" action="?next=/recipes/list">
+		<form method="POST">
       {% csrf_token %} {{ form.as_p }}
       <button type="submit">Login</button>
     </form>
