--- a/recipebook/templates/registration/password_reset_complete.html
+++ b/recipebook/templates/registration/password_reset_complete.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>
-    </head>
-    <body>
-        <h1>Your password has been set.</h1>
-        <p><a href="{{ login_url }}">Login</a></p>
-    </body>
+  <head> </head>
+  <body>
+    {% include "project_title.html" %}
+    <h1>Your password has been set.</h1>
+    <p><a href="{{ login_url }}">Login</a></p>
+  </body>
 </html>
