--- a/recipebook/templates/registration/password_reset_confirm.html
+++ b/recipebook/templates/registration/password_reset_confirm.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>
-    </head>
-    <body>
-        {% if validlink %}
-            <form method="POST">
-                {% csrf_token %} <!-- Cross-site Request Forgery -->
-                {{ form.as_p }}
-                <button type="submit">Reset my password</button>
-            </form>
-        {% else %}
-            <p> Invalid password reset link! </p>
-        {% endif %}
-    </body>
+  <head> </head>
+  <body>
+    {% include "project_title.html" %} {% if validlink %}
+    <form method="POST">
+      {% csrf_token %}
+      <!-- Cross-site Request Forgery -->
+      {{ form.as_p }}
+      <button type="submit">Reset my password</button>
+    </form>
+    {% else %}
+    <p>Invalid password reset link!</p>
+    {% endif %}
+  </body>
 </html>
