--- a/recipebook/templates/registration/password_reset_done.html
+++ b/recipebook/templates/registration/password_reset_done.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>
-    </head>
-    <body>
-        <h1>Password reset request received!</h1>
-    </body>
+  <head> </head>
+  <body>
+    {% include "project_title.html" %}
+    <h1>Password reset request received!</h1>
+  </body>
 </html>
+
