--- a/recipebook/templates/registration/password_reset_form.html
+++ b/recipebook/templates/registration/password_reset_form.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>
-    </head>
-    <body>
-        <form method="POST">
-            {% csrf_token %} <!-- Cross-site Request Forgery -->
-            {{ form.as_p }}
-            <button type="submit">Reset password</button>
-        </form>
-    </body>
+  <head> </head>
+  <body>
+    {% include "project_title.html" %}
+    <form method="POST">
+      {% csrf_token %}
+      <!-- Cross-site Request Forgery -->
+      {{ form.as_p }}
+      <button type="submit">Reset password</button>
+    </form>
+  </body>
 </html>
