--- a/recipebook/templates/registration/login.html
+++ b/recipebook/templates/registration/login.html
@@ -1,5 +1,6 @@
 <html>
   <body>
+    {% include "project_title.html" %}
     <h2>Login</h2>
     <form method="POST">
       {% csrf_token %} {{ form.as_p }}
